Update memory-management.md